# Developer-Tools

oap-chaos-monkey/: Cargo.toml  Dockerfile  Guide.md  README.md  chaos.toml
oap-chaos-monkey/examples/: github-action.yml
oap-chaos-monkey/src/: config.rs  main.rs  metrics.rs  presets.rs  proxy.rs  sabotage.rs  security.rs
oap-cli/: Cargo.toml  Dockerfile  Guide.md  README.md  WORKFLOW_EXAMPLE.md
oap-cli/homebrew/: oap-cli.rb
oap-cli/src/: config.rs  main.rs
oap-cli/src/commands/: connect.rs  did.rs  listen.rs  mod.rs  msg.rs  relay.rs  send.rs
oap-echo-bot/: Dockerfile  GUIDE.md  README.md  composer.json
oap-echo-bot/data/: did.json  keys.json
oap-echo-bot/scripts/: generate_did.php  run_bot.php
oap-echo-bot/src/: Bot.php  Handshake.php  OapCrypto.php  SessionManager.php
oap-inspector/: Dockerfile  Dockerfile 2  Guide.md  package-lock.json  package.json
oap-inspector/src/: App.tsx  types.ts
oap-inspector/src-tauri/: Cargo.toml  tauri.conf.json
oap-inspector/src-tauri/src/: db.rs  keystore.rs  lib.rs  proxy.rs  replay.rs  xray.rs
oap-inspector/src/components/: CredentialViewer.tsx  FlowVisualizer.tsx  HandshakeVisualizer.tsx  InspectorDetail.tsx  KeyManager.tsx  SchemaValidator.tsx  TrafficList.tsx
oap-inspector/src/schemas/: oacp.ts
oap-localnet/: README.md  oap-localnet
oap-localnet/config/: docker-compose.yml
oap-localnet/dashboard/: Dockerfile  main.py  requirements.txt
oap-localnet/dashboard/static/: index.html
oap-localnet/discovery/: Dockerfile  main.py
oap-localnet/ledger/: Dockerfile  main.py
oap-localnet/nginx/: generate_certs.sh  nginx.conf
oap-localnet/nginx/certs/: relay.crt  relay.key
oap-localnet/relay/: Dockerfile  main.py
oap-localnet/seeder/: Dockerfile  seed.py
oap-vs-code-extension/: Dockerfile  Guide.md  README.md  package.json  tsconfig.json
oap-vs-code-extension/schemas/: oacp.schema.json  oapp.schema.json
oap-vs-code-extension/snippets/: oap.code-snippets
oap-vs-code-extension/src/: extension.ts  types.d.ts
oap-vs-code-extension/src/wasm/: Cargo.toml
oap-vs-code-extension/src/wasm/src/: lib.rs
