[package]
name = "oap-cli"
version = "0.1.0"
edition = "2021"
authors = ["OAP Foundation <dev@oap.foundation>"]
description = "Command Line Interface for the Open Agent Protocol"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
colored = "2.0"
rpassword = "7.0"
# Local dependency to oap-core-rs
oap = { path = "../../Reference Implementations/oap-core-rs/oap" }

# Pin base64ct to avoid 2024 edition requirement (due to old rustc)
base64ct = "=1.6.0"
potential_utf = "=0.1.3"

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = "0.21"
hex = "0.4"
clap_complete = "4.4"
