[package]
name = "oap-vscode-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Assuming oap-core-rs is available relative to this extension in the monorepo
# Adjust path as necessary based on workspace structure
[dependencies.oap]
path = "../../../../Reference Implementations/oap-core-rs/oap"
